meego-im-framework (0.20.12~1) unstable; urgency=low

  * [UNRELEASED]

 -- Jan Arne Petersen <jpetersen@openismus.com>  Thu, 12 May 2011 14:27:00 +0300

meego-im-framework (0.20.11-1) unstable; urgency=low

  * Fixes: NB#250363 - A selection for available Input methods needed in Text input Setting

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Thu, 12 May 2011 10:08:07 +0300

meego-im-framework (0.20.10-1) unstable; urgency=low

  * New release

 -- Aapo Kojo <aapo.kojo@nokia.com>  Wed, 11 May 2011 15:49:40 +0300

meego-im-framework (0.20.9-1) unstable; urgency=low

  * Fixes: NB#242682 - Text input settings crashes during close if "Active input method" or "Installed keyboard" is being opened

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Mon, 09 May 2011 11:15:40 +0300

meego-im-framework (0.20.8-1) unstable; urgency=low

  * Fixes: NB#227268 - [Performance] Virtual keyboard orientation switching is too slow

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Thu, 28 Apr 2011 13:27:35 +0300

meego-im-framework (0.20.7-1) unstable; urgency=low

  * Fixes: NB#241274 - VKB's self-composition breaks application UI while navigating between two MApplicationWindows
  * Fixes: SIP is open, focus is lost, immediately request SIP => SIP remains open
  * Changes: allow (non-pre-edit) cursor position to be set in pre-edit update

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 06 Apr 2011 16:32:51 +0300

meego-im-framework (0.20.6-1) unstable; urgency=low

  * Fixes: NB#237663 - <Other><UnitTest> proper debug symbols not available for meego-im-framework-tests

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 06 Apr 2011 14:37:04 +0300

meego-im-framework (0.20.5-1) unstable; urgency=low

  * Fixes: NB#238370 - <Safety> Invalid read reported in meego-im-uiserver valgrind logs

 -- huaming wang <huaming.wang@nokia.com>  Wed, 30 Mar 2011 10:35:01 +0300

meego-im-framework (0.20.4-1) unstable; urgency=low

  * Fixes: Rotation animation rotates to wrong orientation under high CPU load.