@@ -1,6 +1,7 @@
 meego-im-framework (0.20.12~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#254375 - libmeegoimframework-doc does not contain any documentation
 
  -- Jan Arne Petersen <jpetersen@openismus.com>  Thu, 12 May 2011 14:27:00 +0300
 
